# wallaby_mw_refactor

./: .gitignore  AGENT.md  Makefile  README.md  pyproject.toml
configs/: example.ini  examplecreds.ini
containers/casda_download/: Dockerfile
containers/hi4pi_download/: Dockerfile
containers/miriad_script/: Dockerfile
containers/subfits/: Dockerfile  subfits.py
flows/: README.md  wallaby_flow.py  wallaby_mw.py
scripts/: canfar_smoketest.py  paramiko_smoketest.py  ssh_paramiko_smoketest.py
src/wallaby_mw/: __main__.py
src/wallaby_mw/stages/: README.md  apply_subfits.py  casda_download.py  generate_script.py  hi4pi_download.py  miriad_script.py  run_linmos.py
src/wallaby_mw/utils/: README.md  astro.py  auth.py  canfar.py  checksums.py  config.py  errors.py  files.py  logging.py  manifest.py  parse.py  setonix.py  ssh.py
