[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wallaby-mw"
version = "0.1.0"
description = "WALLABY Milky Way pipeline"

dependencies = [
  "astroquery",
  "astropy",
  "keyring",
  "keyrings.alt",
  "prefect>=2.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
