[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallaby-mw"
version = "0.1.0"
description = "WALLABY Milky Way pipeline"
requires-python = ">=3.11,<3.13"

dependencies = [
  "astroquery",
  "astropy",
  "keyring",
  "keyrings.alt",
  "prefect>=3,<4",
  "canfar",
  "wget"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
